--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "QR Code Generator",
-  "version": "1.0",
+  "version": "1.1",
   "description": "Generate QR codes for the current tab URL.",
   "permissions": [
     "tabs",
@@ -19,6 +19,12 @@
   "background": {
     "service_worker": "background.js"
   },
+   "web_accessible_resources": [
+    {
+      "resources": ["dist/output.css"],
+      "matches": ["<all_urls>"]
+    }
+  ],
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
